--- a/one.html
+++ b/one.html
@@ -21,7 +21,7 @@
         margin-left: auto;
         margin-right: auto;
     }
-    #win{
+    .thumbnail{
         width: 200px;
         height: 200px;
         background: white;
@@ -30,12 +30,12 @@
         margin-right: auto;
         overflow: hidden;
         margin-bottom: 20px;
+
     }
-    #win a {
-        margin-top: 10px;
-    }
-    #win canvas{
-        position: absolute;
+    #win{
+        width: 400px;
+        text-align: left;
+        
     }
 </style>
 
@@ -100,12 +100,21 @@
 
 </script>
 </head>
-<body style="">
+<body >
     
     <div class="text">
         <h2>Weird dancer</h2>
-        <div id="win" class="thumbnail"></div>
+        <div class="thumbnail">
+            <div id="win"></div>
+        </div>
         <a href="https://github.com/yannikmesserli/max-the-dj"><img src="img/github.png" alt=""> view source</a>
+        <br>
+        <div style="width:200px;margin-top: 100px;margin-right: auto;margin-left: auto;">
+            <small style="font-size: 0.8em">
+                <em>SHS 2013 production</em> <br>
+                During the course "Design graphique et interactif" I have made this little weird dancer to populate a <a href="./">full game</a>. However it is too demanding for the browser so here's a little preview of my dancer. Entirely done with code and <a href="http://paperjs.org">Paperjs</a>
+            </small>
+        </div>
     </div>
 
     <!-- Generator: Adobe Illustrator of some hairs  -->
